--- a/yahoo.html
+++ b/yahoo.html
@@ -1,4 +1,34 @@
-header, meme, 
-<div>
-    <header>Yahoo</header>
-</div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About me</title>
+</head>
+<body style="background-color:rgb(255,204,255)">
+    <h1><center>Ella's About Me</center></h1>
+    <sub style="font-size:110%;">Hey, Im Ella, a local band kid here. Im currently in Whalen's intro to cs class. His class is a 7/10. Though I would reccomend it to some people. My final words for this class will be, "Yahoo!"</sub>
+        
+
+    <h2>Heres a list of my favorite video games</h2>
+        <ul>
+            <li>Hogwarts Legacy</li>
+            <li>Hollow Knight</li>
+            <li>Hades</li>
+            <li>Ori: Will of the Wisps</li>
+        </ul>
+
+    <h3 style="font-size:150%;">Here is a 100% unbiased ranking of 5 of the most common gacha games</h3>
+        <ol>
+            <li>Arknights</li>
+            <li>Honkai:Star Rail</li>
+            <li>Reverse: 1999</li>
+            <li>Azur Lane</li>
+            <li>Genshin Impact</li>
+        </ol>
+<a href="http://tuckercraig.com/dino/">Click here to play one of the greatest games ever created. So good that the DOE blocked it.</a>
+
+<img src="" alt="">
+
+</body>
+</html>
+
