--- a/yahoo.html
+++ b/yahoo.html
@@ -5,19 +5,23 @@
     <title>About me</title>
 </head>
 <body style="background-color:rgb(255,204,255)">
-    <h1><center>Ella's About Me</center></h1>
-    <sub style="font-size:110%;">Hey, Im Ella, a local band kid here. Im currently in Whalen's intro to cs class. His class is a 7/10. Though I would reccomend it to some people. My final words for this class will be, "Yahoo!"</sub>
+    <h1 style="font-family:garamond;"><center>Ella's About Me</center></h1>
+    <sub><center>Hehe. Hi Mr Whalen</center></sub>
+    <p 
+    style="font-family:garamond;">Hey, Im Ella and I survived half a year in SITHS. I'm currently in Whalen's intro to cs class. His class is a 7/10. Though I would reccomend it to some people. My final words for this class will be, "Yahoo!"
+    </p> 
         
 
-    <h2>Heres a list of my favorite video games</h2>
+    <h3 style="font-family:garamond;">Here's a list of my favorite video games</h3>
         <ul>
             <li>Hogwarts Legacy</li>
             <li>Hollow Knight</li>
             <li>Hades</li>
             <li>Ori: Will of the Wisps</li>
+            <li>Stray</li>
         </ul>
 
-    <h3 style="font-size:150%;">Here is a 100% unbiased ranking of 5 of the most common gacha games</h3>
+    <h4 style="font-size:115%; font-family:garamond;">Here's is a 100% unbiased ranking of 5 of the most common gacha games</h4>
         <ol>
             <li>Arknights</li>
             <li>Honkai:Star Rail</li>
@@ -25,10 +29,8 @@
             <li>Azur Lane</li>
             <li>Genshin Impact</li>
         </ol>
-<a href="http://tuckercraig.com/dino/">Click here to play one of the greatest games ever created. So good that the DOE blocked it.</a>
+<a href="http://tuckercraig.com/dino/">Click here to play one of the greatest games ever created.</a>
 
-<img src="" alt="">
-
+<img align="right" src="https://en.meming.world/images/en/3/3f/This_Is_Fine.jpg" alt="This is Fine meme" style="width: 50%;">
 </body>
 </html>
-
