--- a/yahoo.html
+++ b/yahoo.html
@@ -8,7 +8,7 @@
     <h1 style="font-family:garamond;"><center>Ella's About Me</center></h1>
     <sub><center>Hehe. Hi Mr Whalen</center></sub>
     <p 
-    style="font-family:garamond;">Hey, Im Ella and I survived half a year in SITHS. I'm currently in Whalen's intro to cs class. His class is a 7/10. Though I would reccomend it to some people. My final words for this class will be, "Yahoo!"
+    style="font-family:garamond;">Hey, Im Ella and I survived half a year in SITHS. I'm currently in Whalen's intro to cs class. His class is a 7/10. Though I would reccomend it to some people. RIP the incoming freshman next semester. My final words for this class will be, "Yahoo!"
     </p> 
         
 
